Wrapped less calculations in parentheses so phpStorm will run them correctly. Removed an errant comma in uw.thinstrip.less.

--- a/less/uw/uw.images.less
+++ b/less/uw/uw.images.less
@@ -43,7 +43,7 @@ img {
 
 .wp-caption-text {
 	font-size: 15px;
-	line-height: @line-height-computed / 1.3;
+	line-height: (@line-height-computed / 1.3);
 	margin-top: 15px;
 }
 .wp-media-credit  {
@@ -134,8 +134,8 @@ img {
 	.uw-overlay {
 		cursor: pointer;
 	}
-	.alignright, 
-	.alignleft, 
+	.alignright,
+	.alignleft,
 	.alignnone {
 		float: none;
 		margin: 20px 20px 20px 0px;
