--- a/less/uw/uw.mobile-menu.less
+++ b/less/uw/uw.mobile-menu.less
@@ -43,8 +43,8 @@
       float:right;
       margin-top: -55px;
       margin-right: -10px;
-      font-size: @font-size-base / 1.2;
-      line-height: @line-height-base / 1.2;
+      font-size: (@font-size-base / 1.2);
+      line-height: (@line-height-base / 1.2);
       font-family: @font-family-headline;
       font-weight: @bold;
       text-align: center;
