--- a/less/uw/uw.thinstrip.less
+++ b/less/uw/uw.thinstrip.less
@@ -153,7 +153,7 @@
                 background: url(assets/svg/uw-sprite.svg) no-repeat -451px -235px;
                 overflow: hidden;
                 &:hover,
-                &:focus {                	
+                &:focus {
                 	color: #FFF;
 					text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.54);
 					text-decoration: underline;
@@ -186,7 +186,7 @@
 
             }
         }
-    }		
+    }
     // Active state of search button
 
     .search-open .uw-thinstrip button.uw-search {
@@ -252,7 +252,7 @@
 			background-size: 470px;
       .transition(all 0s);
       &:hover,
-      &:focus,
+      &:focus
       {
         background-size: 470px;
       }
